# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_webtransport"
version = "0.1.0"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/deno"
description = "Implementation of WebTransport API for Deno"

[lib]
path = "lib.rs"

[dependencies]
bytes = "1.2.1"
deno_core = { version = "0.160.0", path = "../../core" }
deno_tls = { version = "0.65.0", path = "../tls", default-features = false, features = ["quic"] }
http = "0.2.8"
hyper = { version = "0.14.18" }
quinn = { git = "https://github.com/quinn-rs/quinn.git", rev = "1d390af2facdf424c7feb470909fffc29a1dca6c" }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
tokio-rustls = { version = "0.23.3", default-features = false }